--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -82,10 +82,8 @@
         padding: 0;
         margin: 0;
         display: inline-flex;
-        align-items: center;
         justify-content: space-between;
         text-align: center;
-        // white-space: nowrap;
     }
 
     &__line,
@@ -131,8 +129,6 @@
         display: flex;
         align-items: center;
         user-select: none;
-        // border-left: 1px solid red;
-        // border-right: 1px solid red;
 
         &:not(.m--is-selected):not(.m--is-disabled) {
             &,
